<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/filter_content_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/week_filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_week_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/week_filter_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filter_content_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/level_filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_level_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/level_filter_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

         <LinearLayout
            android:id="@+id/filter_content_layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/ip_district_filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_ip_district_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/ip_district_filter_dropdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout> 

        <LinearLayout
            android:id="@+id/filter_content_layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <Button
                android:id="@+id/filter_btn_cancel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:layout_marginRight="50dp" />
            
            <Button
                android:id="@+id/filter_btn_filter"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_filter" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>